--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -45,7 +45,7 @@ jobs:
           builder: ${{ steps.buildx.outputs.name }}
           push: true
           tags: | 
-              ${{ secrets.DOCKER_HUB_USERNAME }}/sa-node-base:latest
+              ${{ secrets.DOCKER_HUB_USERNAME }}/sa-python3.7-base:latest
           cache-from: type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/sa-python3.7-base:buildcache
           cache-to: type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/sa-python3.7-base:buildcache,mode=max
 
